Added new carousel slider

--- a/_factory_specials_multiBox.html
+++ b/_factory_specials_multiBox.html
@@ -16,13 +16,13 @@
     <body>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
-                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-specials-1</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-specials-multiBox</p>
             </div>
         </section>
-        <section class="pb-5 pd-specials-1 pt-5" id="pd-specials-roles">
+        <section class="pb-5 pd-specials-multiBox pt-5" id="pd-specials-roles">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 pd-specials-1-nav-mobile-col pe-0 ps-0">
+                    <div class="col-12 pd-specials-multiBox-nav-mobile-col pe-0 ps-0">
                         <div class="glide" data-glide='{"type": "carousel", 
                             "startAt": 0, 
                             "perView": 1,
@@ -47,27 +47,27 @@
                             <div class="glide__track" data-glide-el="track">
                                 <ul class="glide__slides">
                                     <li>
-                                        <a name="anchor" class="pd-specials-1-button-mobile show" data-pd-special-one="pd-special-1-1"> <img src="images/uploads/avatar-woman-1.svg" alt="image of woman" width="40" height="40"> <div>
+                                        <a name="anchor" class="pd-specials-multiBox-button-mobile show" data-pd-multibox="pd-special-1-1"> <img src="images/uploads/avatar-woman-1.svg" alt="image of woman" width="40" height="40"> <div>
                                                 <p>Owner</p>
                                             </div> </a>
                                     </li>
                                     <li>
-                                        <a name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-2"> <img alt="image of woman" width="40" height="40" src="images/uploads/avatar-man-2.svg"> <div>
+                                        <a name="anchor" data-pd-multibox="pd-special-1-2" class="pd-specials-multiBox-button-mobile"> <img alt="image of woman" width="40" height="40" src="images/uploads/avatar-man-2.svg"> <div>
                                                 <p>Administrator</p>
                                             </div> </a>
                                     </li>
                                     <li>
-                                        <a name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-3"> <img alt="image of woman" width="40" height="40" src="images/uploads/avatar-man-1.svg"> <div>
+                                        <a name="anchor" data-pd-multibox="pd-special-1-3" class="pd-specials-multiBox-button-mobile"> <img alt="image of woman" width="40" height="40" src="images/uploads/avatar-man-1.svg"> <div>
                                                 <p>Recruiter</p>
                                             </div> </a>
                                     </li>
                                     <li>
-                                        <a name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-4"> <img alt="image of woman" width="40" height="40" src="images/uploads/avatar-woman-4.svg"> <div>
+                                        <a name="anchor" data-pd-multibox="pd-special-1-4" class="pd-specials-multiBox-button-mobile"> <img alt="image of woman" width="40" height="40" src="images/uploads/avatar-woman-4.svg"> <div>
                                                 <p>Client</p>
                                             </div> </a>
                                     </li>
                                     <li>
-                                        <a name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-5"> <img alt="image of woman" width="40" height="40" src="images/uploads/avatar-man-3.svg"> <div>
+                                        <a name="anchor" data-pd-multibox="pd-special-1-5" class="pd-specials-multiBox-button-mobile"> <img alt="image of woman" width="40" height="40" src="images/uploads/avatar-man-3.svg"> <div>
                                                 <p>Temp Worker</p>
                                             </div> </a>
                                     </li>
@@ -75,21 +75,21 @@
                             </div>
                         </div>                         
                     </div>
-                    <div class="col-lg-9 pd-specials-1-card-col pe-2 pe-sm-0 ps-2 ps-sm-0">
-                        <div class="pd-specials-1-card show" id="pd-special-1-1">
+                    <div class="col-lg-9 pd-specials-multiBox-card-col pe-2 pe-sm-0 ps-2 ps-sm-0">
+                        <div class="pd-specials-multiBox-card show" id="pd-special-1-1">
                             <header>
                                 <img src="images/uploads/avatar-woman-1.svg" alt="image of business owner" width="100" height="100">
                                 <div class=" ps-sm-3">
                                     <h3>Owner</h3>
-                                    <div class="pd-specials-1-headline">
+                                    <div class="pd-specials-multiBox-headline">
                                         <p><strong>In sed maximus dui. Fusce a orci sed magna volutpat suscipit at et tellus</strong></p>
                                     </div>
                                 </div>
                             </header>
-                            <div class="pd-specials-1-card-body">
+                            <div class="pd-specials-multiBox-card-body">
                                 <p>Donec nec lorem et lorem fermentum dictum at at lorem. Mauris faucibus commodo dapibus. Proin metus dui, blandit eget suscipit in, laoreet nec lorem. Vivamus id bibendum dolor. Nulla vehicula tristique lorem eu pulvinar. Nunc nulla est, pulvinar non consequat eget, imperdiet sed mi. Proin lobortis diam ut purus tempor, et gravida tortor ornare. Suspendisse elementum velit nec euismod ornare.</p>
                             </div>
-                            <div class="pd-specials-1-bullet-outer">
+                            <div class="pd-specials-multiBox-bullet-outer">
                                 <ul> 
                                     <li>Sub Feature 1</li>                                     
                                     <li>Sub Feature 2</li>                                     
@@ -97,20 +97,20 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="pd-specials-1-card" id="pd-special-1-2">
+                        <div class="pd-specials-multiBox-card" id="pd-special-1-2">
                             <header>
                                 <img alt="image of business owner" width="100" height="100" src="images/uploads/avatar-man-2.svg">
                                 <div class=" ps-sm-3">
                                     <h3>Administrator</h3>
-                                    <div class=" pd-specials-1-headline">
+                                    <div class="pd-specials-multiBox-headline">
                                         <p><strong>Sed tincidunt feugiat aliquam. Sed vel blandit nibh, nec ornare elit.&nbsp;</strong></p>
                                     </div>
                                 </div>
                             </header>
-                            <div class="pd-specials-1-card-body">
+                            <div class="pd-specials-multiBox-card-body">
                                 <p>Donec nec lorem et lorem fermentum dictum at at lorem. Mauris faucibus commodo dapibus. Proin metus dui, blandit eget suscipit in, laoreet nec lorem. Vivamus id bibendum dolor. Nulla vehicula tristique lorem eu pulvinar.&nbsp;</p>
                             </div>
-                            <div class="pd-specials-1-bullet-outer">
+                            <div class="pd-specials-multiBox-bullet-outer">
                                 <ul> 
                                     <li>Sub Feature 1</li>                                     
                                     <li>Sub Feature 2</li>                                     
@@ -121,20 +121,20 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="pd-specials-1-card" id="pd-special-1-3">
+                        <div class="pd-specials-multiBox-card" id="pd-special-1-3">
                             <header>
                                 <img alt="image of business owner" width="100" height="100" src="images/uploads/avatar-man-1.svg">
                                 <div class=" ps-sm-3">
                                     <h3>Recruiter</h3>
-                                    <div class="pd-specials-1-headline">
+                                    <div class="pd-specials-multiBox-headline">
                                         <p><strong>Nulla at tortor scelerisque, faucibus libero sed, porttitor risus. Aliquam purus nunc, pharetra viverra diam eget</strong></p>
                                     </div>
                                 </div>
                             </header>
-                            <div class="pd-specials-1-card-body">
+                            <div class="pd-specials-multiBox-card-body">
                                 <p>Donec nec lorem et lorem fermentum dictum at at lorem. Mauris faucibus commodo dapibus. Proin metus dui, blandit eget suscipit in, laoreet nec lorem. Vivamus id bibendum dolor. Nulla vehicula tristique lorem eu pulvinar.&nbsp;</p>
                             </div>
-                            <div class="pd-specials-1-bullet-outer">
+                            <div class="pd-specials-multiBox-bullet-outer">
                                 <ul> 
                                     <li>Sub Feature 1</li>                                     
                                     <li>Sub Feature 2</li>                                     
@@ -144,20 +144,20 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="pd-specials-1-card" id="pd-special-1-4">
+                        <div class="pd-specials-multiBox-card" id="pd-special-1-4">
                             <header>
                                 <img alt="image of business owner" width="100" height="100" src="images/uploads/avatar-woman-4.svg">
                                 <div class=" ps-sm-3">
                                     <h3>Client</h3>
-                                    <div class="pd-specials-1-headline">
+                                    <div class="pd-specials-multiBox-headline">
                                         <p><strong>Mauris eget ante et arcu dapibus gravida. Pellentesque sit amet lectus eget arcu tristique laoreet. Ut et ullamcorper felis</strong></p>
                                     </div>
                                 </div>
                             </header>
-                            <div class="pd-specials-1-card-body">
+                            <div class="pd-specials-multiBox-card-body">
                                 <p>Donec nec lorem et lorem fermentum dictum at at lorem. Mauris faucibus commodo dapibus. Proin metus dui, blandit eget suscipit in, laoreet nec lorem. Vivamus id bibendum dolor. Nulla vehicula tristique lorem eu pulvinar.&nbsp;</p>
                             </div>
-                            <div class="pd-specials-1-bullet-outer">
+                            <div class="pd-specials-multiBox-bullet-outer">
                                 <ul> 
                                     <li>Sub Feature 1</li>                                     
                                     <li>Sub Feature 2</li>                                     
@@ -170,20 +170,20 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="pd-specials-1-card" id="pd-special-1-5">
+                        <div class="pd-specials-multiBox-card" id="pd-special-1-5">
                             <header>
                                 <img alt="image of business owner" width="100" height="100" src="images/uploads/avatar-man-3.svg">
                                 <div class=" ps-sm-3">
                                     <h3>Temp Worker</h3>
-                                    <div class="pd-specials-1-headline">
+                                    <div class="pd-specials-multiBox-headline">
                                         <p><strong>Phasellus tempor at magna vel pulvinar. Aliquam tincidunt, augue in sollicitudin varius, dui ipsum gravida est, sit amet pharetra ipsum lectus non nulla</strong></p>
                                     </div>
                                 </div>
                             </header>
-                            <div class="pd-specials-1-card-body">
+                            <div class="pd-specials-multiBox-card-body">
                                 <p>Donec nec lorem et lorem fermentum dictum at at lorem. Mauris faucibus commodo dapibus. Proin metus dui, blandit eget suscipit in, laoreet nec lorem. Vivamus id bibendum dolor. Nulla vehicula tristique lorem eu pulvinar.&nbsp;</p>
                             </div>
-                            <div class="pd-specials-1-bullet-outer">
+                            <div class="pd-specials-multiBox-bullet-outer">
                                 <ul> 
                                     <li>Sub Feature 1</li>                                     
                                     <li>Sub Feature 2</li>                                     
@@ -197,13 +197,13 @@
                             </div>
                         </div>                         
                     </div>
-                    <div class="col-lg-3 pd-specials-1-nav-col pe-0 ps-0">
-                        <div class="pd-specials-1-buttons-outer">
-                            <a href="#" name="anchor" class="pd-specials-1-button show" data-pd-special-one="pd-special-1-1"><img src="images/uploads/avatar-woman-1.svg" alt="image of business owner" width="40" height="40"><p>Owner</p></a>
-                            <a href="#" name="anchor" class="pd-specials-1-button" data-pd-special-one="pd-special-1-2"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-2.svg"><p>Administrator</p></a>
-                            <a href="#" name="anchor" class="pd-specials-1-button" data-pd-special-one="pd-special-1-3"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-1.svg"><p>Recruiter</p></a>
-                            <a href="#" name="anchor" class="pd-specials-1-button" data-pd-special-one="pd-special-1-4"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-woman-4.svg"><p>Client</p></a>
-                            <a href="#" name="anchor" class="pd-specials-1-button" data-pd-special-one="pd-special-1-5"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-3.svg"><p>Temp Worker</p></a>
+                    <div class="col-lg-3 pd-specials-multiBox-nav-col pe-0 ps-0">
+                        <div class="pd-specials-multiBox-buttons-outer">
+                            <a href="#" name="anchor" class="pd-specials-multiBox-button show" data-pd-multibox="pd-special-1-1"><img src="images/uploads/avatar-woman-1.svg" alt="image of business owner" width="40" height="40"><p>Owner</p></a>
+                            <a href="#" name="anchor" class="pd-specials-multiBox-button" data-pd-multibox="pd-special-1-2"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-2.svg"><p>Administrator</p></a>
+                            <a href="#" name="anchor" data-pd-multibox="pd-special-1-3" class="pd-specials-multiBox-button"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-1.svg"><p>Recruiter</p></a>
+                            <a href="#" name="anchor" data-pd-multibox="pd-special-1-4" class="pd-specials-multiBox-button"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-woman-4.svg"><p>Client</p></a>
+                            <a href="#" name="anchor" data-pd-multibox="pd-special-1-5" class="pd-specials-multiBox-button"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-3.svg"><p>Temp Worker</p></a>
                         </div>                         
                     </div>
                 </div>
@@ -221,6 +221,6 @@
         <script src="/bootstrap/js/bootstrap.min.js"></script>
         <script src="/assets/js/glide.min.js"></script>
         <script src="/assets/js/functions-sliders.js"></script>
-        <script src="/assets/js/functions-specials-1.js"></script>
+        <script src="/assets/js/functions-specials-multibox.js"></script>
     </body>
 </html>
