Added steps carousel

--- a/_factory_specials_carouselSteps.html
+++ b/_factory_specials_carouselSteps.html
@@ -34,7 +34,7 @@
                     <div class="col-12">
                         <div class="glide" data-glide='{"type": "carousel", 
                             "startAt": 0, 
-                            "perView": 1}'>
+                            "perView": 1}' id="glideInstance1">
                             <div class="glide__track" data-glide-el="track">
                                 <ul class="glide__slides">
                                     <li class="glide__slide">
@@ -62,6 +62,80 @@
                                             </div>
                                         </div>                                         
                                     </li>
+                                    <li class="glide__slide">
+                                        <div class="pd-specials-carouselSteps-slide">
+                                            <div class="pd-specials-carouselSteps-slide-left">
+                                                <img alt="image of software step 1" width="400" height="400" src="images/uploads/step-2.png">
+                                            </div>
+                                            <div class="pd-specials-carouselSteps-slide-right">
+                                                <div class="pd-specials-carouselSteps-right-inner">
+                                                    <h3>Step 2</h3>
+                                                    <div class="pd-specials-carouselSteps-inner-headline">
+                                                        <p><strong>Nunc nec tempus orci, vel porta eros. Vestibulum lobortis est id sagittis convallis</strong></p>
+                                                    </div>
+                                                    <div class="pd-specials-carouselSteps-inner-para">
+                                                        <p>Donec at mauris nunc. Sed imperdiet tincidunt mi, vel placerat urna efficitur non. Vestibulum ultrices magna sit amet odio interdum, sit amet semper elit commodo.</p>
+                                                    </div>
+                                                    <ul> 
+                                                        <li>Lorem ipsum dolor sit amet</li>                                                         
+                                                        <li>Consectetur adipiscing elit</li>                                                         
+                                                        <li>Integer molestie lorem at massa</li>                                                         
+                                                        <li>Nulla volutpat aliquam velit                                                                                 
+</li>
+                                                        <li>Consectetur adipiscing elit</li>                                                         
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>                                         
+                                    </li>
+                                    <li class="glide__slide">
+                                        <div class="pd-specials-carouselSteps-slide">
+                                            <div class="pd-specials-carouselSteps-slide-left">
+                                                <img alt="image of software step 1" width="400" height="400" src="images/uploads/step-3.png">
+                                            </div>
+                                            <div class="pd-specials-carouselSteps-slide-right">
+                                                <div class="pd-specials-carouselSteps-right-inner">
+                                                    <h3>Step 3</h3>
+                                                    <div class="pd-specials-carouselSteps-inner-headline">
+                                                        <p><strong>Aliquam placerat turpis leo, quis mollis urna pharetra a. Duis euismod pellentesque dapibus</strong></p>
+                                                    </div>
+                                                    <div class="pd-specials-carouselSteps-inner-para">
+                                                        <p>Donec at mauris nunc. Sed imperdiet tincidunt mi, vel placerat urna efficitur non. Vestibulum ultrices magna sit amet odio interdum, sit amet semper elit commodo.</p>
+                                                    </div>
+                                                    <ul> 
+                                                        <li>Lorem ipsum dolor sit amet</li>                                                                                                                                                                           
+                                                        <li>Nulla volutpat aliquam velit                                                                                 
+</li>
+                                                        <li>Consectetur adipiscing elit</li>                                                         
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>                                         
+                                    </li>
+                                    <li class="glide__slide">
+                                        <div class="pd-specials-carouselSteps-slide">
+                                            <div class="pd-specials-carouselSteps-slide-left">
+                                                <img alt="image of software step 1" width="400" height="400" src="images/uploads/step-4.png">
+                                            </div>
+                                            <div class="pd-specials-carouselSteps-slide-right">
+                                                <div class="pd-specials-carouselSteps-right-inner">
+                                                    <h3>Step 4</h3>
+                                                    <div class="pd-specials-carouselSteps-inner-headline">
+                                                        <p><strong>Nunc nec tempus orci, vel porta eros. Vestibulum lobortis est id sagittis convallis</strong></p>
+                                                    </div>
+                                                    <div class="pd-specials-carouselSteps-inner-para">
+                                                        <p>Donec at mauris nunc. Sed imperdiet tincidunt mi, vel placerat urna efficitur non. Vestibulum ultrices magna sit amet odio interdum, sit amet semper elit commodo.</p>
+                                                    </div>
+                                                    <ul> 
+                                                        <li>Lorem ipsum dolor sit amet</li>                                                                                                                                                                           
+                                                        <li>Nulla volutpat aliquam velit                                                                                 
+</li>
+                                                        <li>Consectetur adipiscing elit</li>                                                         
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>                                         
+                                    </li>
                                 </ul>
                             </div>
                             <div class="glide__arrows" data-glide-el="controls">
@@ -82,8 +156,6 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-specials-carouselSteps</p>
             </div>
         </section>
-        <div class="container">
-</div>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
