Added instructions to multibox component

--- a/_factory_specials_multiBox.html
+++ b/_factory_specials_multiBox.html
@@ -16,7 +16,7 @@
     <body>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
-                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-specials-multiBox</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-specials-multiBox - Ensure each instance has a unique id, plus give an id to each card, and add this card's id to each button in the data-pd-multibox attribute. Requires glide.core.min.css, glide.min.js, functions-sliders.js and functions-specials-multibox.js in order to function properly</p>
             </div>
         </section>
         <section class="pb-5 pd-specials-multiBox pt-5" id="pd-specials-roles">
