--- a/_factory_specials_stats.html
+++ b/_factory_specials_stats.html
@@ -18,6 +18,52 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-specials-stats-1</p>
             </div>
         </section>
+        <section class="pb-5 pd-specials-stats-1 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 pe-md-5 ps-md-5" style="position: relative;">
+                        <div class="pd-specials-stats-1-icon-outer">
+                            <div class="pd-specials-stats-1-icon-container">
+                                <img src="images/uploads/grow-1.png" alt="image of growth icon" width="70" height="70">
+                            </div>
+                        </div>
+                        <div class="left pd-specials-stats-1-text-outer">
+                            <p>Consectetur adipiscing elit <span>1234</span> sed magna risus, gravida non euismod vitae</p>
+                        </div>                                                  
+                    </div>
+                    <div class="col-12 pe-md-5 ps-md-5" style="position: relative;">
+                        <div class="pd-specials-stats-1-icon-outer">
+                            <div class="pd-specials-stats-1-icon-container">
+                                <img alt="image of growth icon" width="70" height="70" src="images/uploads/grow-2.png">
+                            </div>
+                        </div>
+                        <div class="left pd-specials-stats-1-text-outer">
+                            <p>Ut consequat odio vel blandit commodo  <span>1234</span> urna mauris mattis lorem, et ornare velit orci placerat dolor</p>
+                        </div>                                                  
+                    </div>
+                    <div class="col-12 pe-md-5 ps-md-5" style="position: relative;">
+                        <div class="pd-specials-stats-1-icon-outer right">
+                            <div class="pd-specials-stats-1-icon-container">
+                                <img alt="image of growth icon" width="70" height="70" src="images/uploads/grow-3.png">
+                            </div>
+                        </div>
+                        <div class="pd-specials-stats-1-text-outer right">
+                            <p>Praesent convallis laoreet blandit <span>1234</span> proin lacinia id metus vitae scelerisque. Fusce a justo semper</p>
+                        </div>                                                  
+                    </div>
+                    <div class="col-12 pe-md-5 ps-md-5" style="position: relative;">
+                        <div class="pd-specials-stats-1-icon-outer right">
+                            <div class="pd-specials-stats-1-icon-container">
+                                <img alt="image of growth icon" width="70" height="70" src="images/uploads/grow-4.png">
+                            </div>
+                        </div>
+                        <div class="pd-specials-stats-1-text-outer right">
+                            <p>Class aptent taciti sociosqu ad litora torquent <span>1234</span>. Maecenas ultrices a est eu mattis. Aliquam scelerisque augue justo, eu venenatis mi tempor</p>
+                        </div>                                                  
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-specials-stats-2</p>
