Added stats with counting functionality

--- a/_factory_specials_stats.html
+++ b/_factory_specials_stats.html
@@ -13,7 +13,7 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <section class="pb-5 pt-5" style="position: relative;">
+        <section class="pb-5 pt-5" style="position: relative; height: 800px;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-specials-stats-1</p>
             </div>
@@ -21,45 +21,46 @@
         <section class="pb-5 pd-specials-stats-1 pt-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 pe-md-5 ps-md-5" style="position: relative;">
+                    <div class="col-12 pd-specials-stats-1-stat-wrapper pe-md-5 ps-md-5" style="position: relative;">
                         <div class="pd-specials-stats-1-icon-outer">
                             <div class="pd-specials-stats-1-icon-container">
                                 <img src="images/uploads/grow-1.png" alt="image of growth icon" width="70" height="70">
                             </div>
                         </div>
                         <div class="left pd-specials-stats-1-text-outer">
-                            <p>Consectetur adipiscing elit <span>1234</span> sed magna risus, gravida non euismod vitae</p>
-                        </div>                                                  
+                            <p>Consectetur adipiscing elit  <span data-stat-type-pre="" data-stat-type-post="" data-stat-time="2000" data-stat-value="60000">60000</span> 
+                                sed magna risus, gravida non euismod vitae</p>
+                        </div>                         
                     </div>
-                    <div class="col-12 pe-md-5 ps-md-5" style="position: relative;">
+                    <div class="col-12 pd-specials-stats-1-stat-wrapper pe-md-5 ps-md-5" style="position: relative;">
                         <div class="pd-specials-stats-1-icon-outer">
                             <div class="pd-specials-stats-1-icon-container">
                                 <img alt="image of growth icon" width="70" height="70" src="images/uploads/grow-2.png">
                             </div>
                         </div>
                         <div class="left pd-specials-stats-1-text-outer">
-                            <p>Ut consequat odio vel blandit commodo  <span>1234</span> urna mauris mattis lorem, et ornare velit orci placerat dolor</p>
-                        </div>                                                  
+                            <p>Ut consequat odio vel blandit commodo   <span data-stat-type-pre="&#x24;" data-stat-type-post="" data-stat-time="2000" data-stat-value="200">&#x24;200</span> urna mauris mattis lorem, et ornare velit orci placerat dolor</p>
+                        </div>                         
                     </div>
-                    <div class="col-12 pe-md-5 ps-md-5" style="position: relative;">
+                    <div class="col-12 pd-specials-stats-1-stat-wrapper pe-md-5 ps-md-5" style="position: relative;">
                         <div class="pd-specials-stats-1-icon-outer right">
                             <div class="pd-specials-stats-1-icon-container">
                                 <img alt="image of growth icon" width="70" height="70" src="images/uploads/grow-3.png">
                             </div>
                         </div>
                         <div class="pd-specials-stats-1-text-outer right">
-                            <p>Praesent convallis laoreet blandit <span>1234</span> proin lacinia id metus vitae scelerisque. Fusce a justo semper</p>
-                        </div>                                                  
+                            <p>Praesent convallis laoreet blandit  <span data-stat-type-pre="" data-stat-type-post="&#x25;" data-stat-time="2000" data-stat-value="124">124&#x25;</span> proin lacinia id metus vitae scelerisque. Fusce a justo semper</p>
+                        </div>                         
                     </div>
-                    <div class="col-12 pe-md-5 ps-md-5" style="position: relative;">
+                    <div class="col-12 pd-specials-stats-1-stat-wrapper pe-md-5 ps-md-5" style="position: relative;">
                         <div class="pd-specials-stats-1-icon-outer right">
                             <div class="pd-specials-stats-1-icon-container">
                                 <img alt="image of growth icon" width="70" height="70" src="images/uploads/grow-4.png">
                             </div>
                         </div>
                         <div class="pd-specials-stats-1-text-outer right">
-                            <p>Class aptent taciti sociosqu ad litora torquent <span>1234</span>. Maecenas ultrices a est eu mattis. Aliquam scelerisque augue justo, eu venenatis mi tempor</p>
-                        </div>                                                  
+                            <p>Class aptent taciti sociosqu ad litora torquent  <span data-stat-type-pre="&#x24;" data-stat-type-post="" data-stat-time="2000" data-stat-value="2500">&#x24;2500</span>. Maecenas ultrices a est eu mattis. Aliquam scelerisque augue justo, eu venenatis mi tempor</p>
+                        </div>                         
                     </div>
                 </div>
             </div>
@@ -76,5 +77,6 @@
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="assets/js/popper.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="/assets/js/functions-stats.js"></script>
     </body>
 </html>
